Add support for Canon MP220 and iP4600.

--- a/NEWS
+++ b/NEWS
@@ -293,6 +293,10 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
       RX685, RX690, PM-A940, and PM-T960.  Support for these printers
       is still considered experimental.
 
+   5) Support has been added for the Canon MULTIPASS MP220.
+
+   6) Preliminary support has been added for the Canon PIXMA iP4600.
+
 
 ----------------
 
