According to https://bugs.launchpad.net/bugs/389014 the PIXMA iX4000 can be used with the iX5000 driver

--- a/NEWS
+++ b/NEWS
@@ -338,6 +338,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
 
    6) Preliminary support has been added for the Canon PIXMA iP4600.
 
+   7) Preliminary support has been added for the Canon PIXMA iX4000.
 
 ----------------
 
