--- a/po/it.po
+++ b/po/it.po
@@ -4,21 +4,21 @@
 # Copyright (C) 2006, 2008 Free Software Foundation, Inc.
 #
 # This file is distributed under the same license as the gutenprint package.
-# Luca Ferretti <elle.uca@libero.it>, 2006.
-# Gruppo traduzione Italiano di Ubuntu <gruppo-traduzione@ubuntu-it.org>, 2008.
-# Marco Poletti <poletti.marco@gmail.com>, 2008, 2009.
 #
 # Convenzioni:
 #
 # Dove «output» si riferisce a «stampa»,
 # è stato tradotto con «stampa» e non con «uscita»
 #
+# Luca Ferretti <elle.uca@libero.it>, 2006.
+# Gruppo traduzione Italiano di Ubuntu <gruppo-traduzione@ubuntu-it.org>, 2008.
+# Marco Poletti <poletti.marco@gmail.com>, 2008, 2009.
 msgid ""
 msgstr ""
 "Project-Id-Version: gutenprint-5.2.3.99.1\n"
 "Report-Msgid-Bugs-To: gimp-print-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2009-06-13 21:39-0400\n"
-"PO-Revision-Date: 2009-06-21 19:35+0200\n"
+"PO-Revision-Date: 2009-06-22 10:48+0200\n"
 "Last-Translator: Marco Poletti <poletti.marco@gmail.com>\n"
 "Language-Team: Italian <tp@lists.linux.it>\n"
 "MIME-Version: 1.0\n"
@@ -2833,9 +2833,15 @@ msgstr "Motivo"
 msgid "Matte"
 msgstr "Opaca"
 
+# (ndt) Spiegazione dello sviluppatore:
+# «Some dye sublimation printers are able to achieve
+# better durability of output by covering it with
+# trasparent laminate surface. This surface can be
+# of different patterns: common are matte, glossy
+# or texture»
 #: src/main/print-olympus.c:1896 src/main/print-olympus.c:1897
 msgid "Laminate Pattern"
-msgstr "Motivo di laminatura"
+msgstr "Tipo di laminazione"
 
 #: src/main/print-olympus.c:1932
 msgid "Adjust the cyan balance"
